<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ODK-X Scan</string>

    <string name="app_description">Scan and process bubble forms</string>
    <string name="bubble_process_activity">Processing Scanned Form</string>
    <string name="view_bubble_forms_activity">View Forms</string>
    <string name="bubble_instructions_activity">Instructions</string>
    <string name="display_processed_form_activity">Display Processed Form</string>
    <string name="display_processed_data_activity">Display Processed Data</string>
    <string name="after_photo_taken_activity">Captured Image</string>

    <!-- For Preferences -->
    <string name="calibrate">Calibrate</string>
    <string name="doFormDetection">Do Form Detection</string>
    <string name="template_to_use">Template to Use</string>
    <string name="specify_form_type">Set to scan \"%s\" form template(s)</string>
    <string name="no_form_selected">Please select a form template</string>
    <string name="directory_search_method">Directory search method</string>
    <string name="default_directory_search">flat</string>

    <!-- For Main Screen -->
    <string name="Health_Center">Health Center</string>
    <string name="the_current_health_center_is">The current health center is:</string>
    <string name="template_selected">Templates selected: &lt;i>%s&lt;/i></string>
    <string name="no_template">Please select a template to use from the settings menu before
        scanning.</string>
    <string name="scan_new_form">Scan New Form</string>
    <string name="process_image">Process Saved Image</string>
    <string name="process_folder">Process Image Folder</string>
    <string name="view_forms_button">View Scanned Forms</string>
    <string name="instructions">Instructions</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <!-- For Initialization -->
    <string name="initializing">Initializing &#8230;</string>
    <string name="configuring_app">Configuring %1$s</string>
    <string name="please_wait">Please Wait</string>
    <string name="initialization_complete">Initialization completed successfully</string>
    <string name="initialization_failed">Initialization failures occurred</string>
    <string name="database_unavailable">Database Unavailable</string>

    <!-- AcquireFormImageActivity -->
    <string name="select_image_title">Select Image to Process</string>
    <string name="select_image_button">Process Image</string>
    <string name="select_directory_title">Select Image Folder to Process</string>
    <string name="select_directory_button">Process Images</string>
    <string name="error_no_camera">There was no Camera app found on this device.</string>
    <string name="error_no_file_picker">There was no File Picker app found on this device.</string>
    <string name="error_no_folder_picker">There was no Folder Picker app found on this device.
    </string>
    <string name="error_acquire_bad_return">Failed to capture image.</string>
    <string name="error_file_creation">Could not save photo.</string>
    <string name="error_finding_file">Could not find photo.</string>
    <string name="error_finding_dir">Could not find folder.</string>
    <string name="background_processing">Processing photos in background...</string>
    <string name="error_empty_folder">No images found in the folder</string>
    <string name="processing_in_background">Processing photo(s) in background...</string>
    <string name="captured_form">Captured form: %s</string>

    <!-- ProcessFormsService -->
    <string name="begin_processing">Processing form...</string>
    <string name="error_background_exception">Background processing exception!</string>
    <string name="error_missing_intent">Missing extras in intent.</string>
    <string name="error_missing_config">config property is not in extras.</string>
    <string name="error_missing_template_paths">template paths property is not in extras.</string>
    <string name="error_missing_photo_name">photo name property is not in extras.</string>
    <string name="error_missing_op_code">operation code property is not in extras.</string>
    <string name="error_missing_uri">uri property is not in extras.</string>
    <string name="error_processing">Error processing form.</string>
    <string name="finished_processing">Finished processing form.</string>
    <string name="acquired_from_camera">Acquired image from camera.</string>
    <string name="acquired_from_file_picker">Acquired image from file picker.</string>
    <string name="acquired_from_folder_picker">Acquired image from folder.</string>
    <string name="error_failed_create_config">Failed to create JSON config.</string>
    <string name="error_uri_not_found">No file URI was found.</string>
    <string name="error_photo_name_not_found">No photo name was found.</string>

    <!-- DisplayProcessedFormActivity -->
    <string name="next_page">Scan Next Page</string>
    <string name="save">Save</string>
    <string name="transcribe">Transcribe</string>
    <string name="collect_save">Collect Save</string>
    <string name="collect_transcribe">Collect Transcribe</string>

    <!-- Popup menu -->
    <string name="save_data">Save Data</string>
    <string name="display_data">Display Data</string>
    <string name="main_menu">Main Menu</string>

    <!-- Instructions -->
    <string name="Instructions1">The BubbleBot appplication is designed to convert paper bubbleforms
        into a digital format using computer vision.
    </string>
    <string name="Instructions2">To scan a form, click the \"Scan New Form\" button on the main
        page. This will open up a camera. A rectangle will be overlaid on top of the viewfinder.
        In order to capture your paper form correctly, orient the phone so that your paper form
        fits inside the rectangle. When the phone is oriented correctly, the rectangle will turn
        green. To take a picture, click on the camera button.
    </string>
    <string name="Instructions3">After taking a picture, the image will be processed. This process
        may take a few minutes. Once processing is complete, you will be able to view a copy of
        the image indicating which bubbles were identified by the computer vision algorithm.
        Recognized bubbles will be circled in red. If the processing is not acceptable, click on the
        \"Take New Picture\" button to retake. If the processing is acceptable, press \"Accept\".
        The data will be stored in digital format.
    </string>
    <string name="Instructions4">To view forms that have already been scanned, click the \"View
        Scanned Forms\" page on the main screen. You will be able to view both the textual data
        collected and the image displaying which bubbles were recognized by the computer vision
        algorithm. You may retake the picture from here as well.
    </string>
    <string name="title_activity_process_image">ProcessImageActivity</string>
    <string name="title_activity_abs_base">AbsBaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
