...
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:contentDescription="ODKScan title"
            android:src="@drawable/odk_scan_logo"/>

    <TextView
            android:id="@+id/TemplateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/template_selected"
            android:textSize="20sp"
            android:layout_margin="5sp"/>

...
